<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_small" />

        <LinearLayout
            android:id="@+id/linear_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/purple_700" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                android:layout_marginLeft="5dp"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_lastname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/purple_700" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_pass"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDOB"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_DOB"
                android:inputType="date"
                android:maxLines="1"
                android:editable="false"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutContact"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Contact"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddress"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_address"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/static_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />


       <!-- <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutType"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:endIconMode="dropdown_menu"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Contact"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/text_reg" />





    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>